<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <CheckBox
            android:id="@+id/nsRandom"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/random" />

        <CheckBox
            android:id="@+id/nsBounce"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/bounce" />
    </LinearLayout>

    <com.panopset.droid.textslider.TextSlider
        android:id="@+id/nsStart"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:lbl="Start"
        app:min="0"
        app:max="255"
        />

    <com.panopset.droid.textslider.TextSlider
        android:id="@+id/nsMin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:lbl="Minimum"
        app:min="0"
        app:max="255"
        />

    <com.panopset.droid.textslider.TextSlider
        android:id="@+id/nsMax"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:lbl="Maximum"
        app:min="0"
        app:max="255"
        />


    <com.panopset.droid.textslider.TextSlider
        android:id="@+id/nsDelay"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:lbl="Delay"
        app:min="0"
        app:max="1000"
        />


    <Button
        android:id="@+id/nsSave"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_save" />

</LinearLayout>
